# sharpGraphsFullStack

./: LICENSE  README.md
ServerSide/: Dockerfile  README.md  TMS_Data.db  addFolderToDB.py  addToDB.py  connectionPool.py  createDB.py  data.py  dataFile.xlsx  decOrders.xlsx  editDb.py  getCount.py  getFromDB.py  pyproject.toml  requirements.txt  server.py  tester.py  ytd.xlsx
ServerSide/templates/assets/: index-RykgJ-UG.css
ServerSide/templates/templates/: index.html
ServerSide/templates/templates/assets/: index-dPeNwl7T.js
clientSide/: README.md  index.html  package-lock.json  package.json
clientSide/src/: App.jsx  DateRangePicker.jsx  DestinationsPie.jsx  Loading.jsx  MonthlyRevenueByUser.jsx  MonthlyTotalMiles.jsx  RevByCode.jsx  RevenueContainer.jsx  StackedBar.jsx  StackedBarContainer.jsx  TrippleBarChart.jsx  YearlyRevenue.jsx  api.js  default.jsx  index.css  monthlyRevLine.jsx  utilityFunctions.js  weeklyCount.jsx  yearByYearLine.jsx
clientSide/src/scripts/: api.js
clientSide/templates/: index.html
clientSide/templates/assets/: index-1AFK-ukL.js  index-Hg9C6CH-.css  index-SDtrVt_V.css  index-lqsFCnFl.js
